re PR c++/35546 (__attribute__(format...) broken for members of template classes?)

PR c++/35546
	* pt.c (apply_late_template_attributes): Don't call tsubst on
	first attribute argument if it is IDENTIFIER_NODE.

	* g++.dg/ext/attrib33.C: New test.

From-SVN: r133616